@@ -19,7 +19,7 @@ Copyright @copyright{} 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
+under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
 Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
 copy of the license is included in the section entitled ``GNU Free
@@ -5264,7 +5264,7 @@ The credential cache file format is described in the file
 
 @cindex FDL, GNU Free Documentation License
 
-@include fdl.texi
+@include fdl-1.3.texi
 
 @node GNU GPL
 @appendixsec GNU General Public License
