@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgnu --source-base=gl --m4-base=gl/m4 --doc-base=doc --tests-base=gl/tests --aux-dir=build-aux --avoid=xalloc-die --libtool --macro-prefix=gl --no-vc-files arpa_inet autobuild base64 crc crypto/arcfour crypto/gc-des crypto/gc-hmac-md5 crypto/gc-hmac-sha1 crypto/gc-md4 crypto/gc-md5 crypto/gc-pbkdf2-sha1 crypto/gc-random fcntl fdl gendocs getaddrinfo getdate getline getpass getsubopt gnupload gpl-3.0 maintainer-makefile minmax netinet_in read-file signal socklen stdint strcase strndup strtok_r strverscmp sys_select sys_socket sys_stat sys_time time timegm unistd vasnprintf vasprintf xalloc xgetdomainname xgethostname xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgnu --source-base=gl --m4-base=gl/m4 --doc-base=doc --tests-base=gl/tests --aux-dir=build-aux --avoid=xalloc-die --libtool --macro-prefix=gl --no-vc-files arpa_inet autobuild base64 crc crypto/arcfour crypto/gc-des crypto/gc-hmac-md5 crypto/gc-hmac-sha1 crypto/gc-md4 crypto/gc-md5 crypto/gc-pbkdf2-sha1 crypto/gc-random fcntl fdl-1.3 gendocs getaddrinfo getdate getline getpass getsubopt gnupload gpl-3.0 maintainer-makefile minmax netinet_in read-file signal socklen stdint strcase strndup strtok_r strverscmp sys_select sys_socket sys_stat sys_time time timegm unistd vasnprintf vasprintf xalloc xgetdomainname xgethostname xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
