@@ -315,7 +315,7 @@ AC_DEFUN([gl_FILE_LIST], [
   build-aux/gendocs.sh
   build-aux/gnupload
   build-aux/link-warning.h
-  doc/fdl.texi
+  doc/fdl-1.3.texi
   doc/gendocs_template
   doc/getdate.texi
   doc/gpl-3.0.texi
